WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280344
REGRESSION(
284139@main
): [ Debug ] TestWebKitAPI.WebKit.CloseFromWithinCreatePage is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=280344
Summary
REGRESSION(284139@main): [ Debug ] TestWebKitAPI.WebKit.CloseFromWithinCreate...
Dawn Morningstar
Reported
2024-09-25 12:19:09 PDT
TestWebKitAPI.WebKit.CloseFromWithinCreatePage Is a constant timeout on all Debug queues. This looks like it regressed at
284139@main
. History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.CloseFromWithinCreatePage
Test-run:
https://build.webkit.org/#/builders/944/builds/2826
STDIO:
https://build.webkit.org/#/builders/944/builds/2826/steps/19/logs/stdio
Timeout: Timeout TestWTF.SequenceLockedTest.Works TestWebKitAPI.WebKit.CloseFromWithinCreatePage ASSERTION FAILED: newFrame->opener() == &openerFrame /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebCore/page/LocalDOMWindow.cpp(2596) : static ExceptionOr<RefPtr<Frame>> WebCore::LocalDOMWindow::createWindow(const String &, const AtomString &, const WindowFeatures &, LocalDOMWindow &, LocalFrame &, LocalFrame &, const Function<void (LocalDOMWindow &)> &) 1 0x24b99cff1 WebCore::LocalDOMWindow::createWindow(WTF::String const&, WTF::AtomString const&, WebCore::WindowFeatures const&, WebCore::LocalDOMWindow&, WebCore::LocalFrame&, WebCore::LocalFrame&, WTF::Function<void (WebCore::LocalDOMWindow&)> const&) 2 0x24b99e456 WebCore::LocalDOMWindow::open(WebCore::LocalDOMWindow&, WebCore::LocalDOMWindow&, WTF::String const&, WTF::AtomString const&, WTF::String const&) 3 0x24b8c3bf0 WebCore::DOMWindow::open(WebCore::LocalDOMWindow&, WebCore::LocalDOMWindow&, WTF::String const&, WTF::AtomString const&, WTF::String const&) 4 0x2470bc5d5 WebCore::jsDOMWindowInstanceFunction_openBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*) 5 0x2470bc166 long long WebCore::IDLOperation<WebCore::JSDOMWindow>::call<&WebCore::jsDOMWindowInstanceFunction_openBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*), (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) 6 0x2470b4b14 WebCore::jsDOMWindowInstanceFunction_open(JSC::JSGlobalObject*, JSC::CallFrame*) 7 0x1ebc20038 6 ??? 0x00000001ebc20038 0x0 + 8250327096 8 0x1b0a0b4ec llint_entry 9 0x1b0a0b4ec llint_entry 10 0x1b09e4705 vmEntryToJavaScript 11 0x1af8cd427 JSC::Interpreter::executeCallImpl(JSC::VM&, JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 12 0x1af8cd590 JSC::Interpreter::executeCall(JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 13 0x1afbb6152 JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 14 0x1afbb622d JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 15 0x1afbb650d JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 16 0x249cab2bc WebCore::JSExecState::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 17 0x249d4afff WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 18 0x24aa2dd31 WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener>>, 1ul, WTF::CrashOnOverflow, 2ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 19 0x24aa2d66d WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 20 0x24b98d50c WebCore::LocalDOMWindow::dispatchEvent(WebCore::Event&, WebCore::EventTarget*) 21 0x24b99a523 WebCore::LocalDOMWindow::dispatchLoadEvent() 22 0x24a8b983a WebCore::Document::dispatchWindowLoadEvent() 23 0x24a8b928d WebCore::Document::implicitClose() 24 0x24b6aceba WebCore::FrameLoader::checkCallImplicitClose() 25 0x24b6ac76a WebCore::FrameLoader::checkCompleted() 26 0x24b6a9db0 WebCore::FrameLoader::finishedParsing() 27 0x24a8d54ee WebCore::Document::finishedParsing() 28 0x24b1681da WebCore::HTMLConstructionSite::finishedParsing() 29 0x24b1cc74d WebCore::HTMLTreeBuilder::finished() 30 0x24b170307 WebCore::HTMLDocumentParser::end() 31 0x24b16df98 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd()
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-25 12:19:51 PDT
<
rdar://problem/136697354
>
Alex Christensen
Comment 2
2024-09-25 13:51:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34245
EWS
Comment 3
2024-09-25 13:55:59 PDT
Committed
284240@main
(3103df0a57f7): <
https://commits.webkit.org/284240@main
> Reviewed commits have been landed. Closing PR #34245 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug