REGRESSION(284139@main): [ Debug ] TestWebKitAPI.WebKit.CloseFromWithinCreatePage is a constant timeout https://bugs.webkit.org/show_bug.cgi?id=280344 rdar://136697354

Reviewed by Charlie Wolfe.

If WKPageClose is used to close the opener while opening a page, the new page's
opener can now be null.  This is reasonable, so just update the assertion.

* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::createWindow):

Canonical link: https://commits.webkit.org/284240@main